[gd_scene load_steps=8 format=3 uid="uid://t8irddu7gu22"]

[ext_resource type="Texture2D" uid="uid://cv4u25ygwcxao" path="res://assets/art/machinery/machineryG1_sh.png" id="1_fnwwa"]
[ext_resource type="Script" uid="uid://c6jn4cxjd17y4" path="res://scripts/machinery/machine.gd" id="1_n00xr"]
[ext_resource type="Texture2D" uid="uid://c7d62fywa4qf3" path="res://assets/art/machinery/machineryG1.png" id="1_y82dy"]
[ext_resource type="PackedScene" uid="uid://bmy7v5qkn5kpj" path="res://scenes/interaction/interactable.tscn" id="3_w41b0"]
[ext_resource type="PackedScene" uid="uid://7weykc71phy4" path="res://scenes/machinery/item_processing_component.tscn" id="4_n00xr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fnwwa"]
size = Vector2(36, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w41b0"]
size = Vector2(38, 22)

[node name="Composter" type="StaticBody2D" groups=["machinery"]]
collision_mask = 0
script = ExtResource("1_n00xr")
container_type = "organic crate"
box_produced = "res://scenes/objects/box_organic.tscn"

[node name="Shadow" type="Sprite2D" parent="."]
texture = ExtResource("1_fnwwa")
region_enabled = true
region_rect = Rect2(0, 64, 48, 32)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_y82dy")
region_enabled = true
region_rect = Rect2(0, 64, 48, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_fnwwa")

[node name="Interactable" parent="." instance=ExtResource("3_w41b0")]
interaction_name = "composter"

[node name="CollisionShape2D" parent="Interactable" index="0"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_w41b0")

[node name="ItemProcessingComponent" parent="." instance=ExtResource("4_n00xr")]

[node name="ProgressBar" parent="ItemProcessingComponent" index="0"]
offset_top = -20.0
offset_bottom = -5.0

[node name="SpawnMarker" parent="ItemProcessingComponent" index="2"]
position = Vector2(-7, 23)

[connection signal="body_entered" from="Interactable" to="." method="_on_interactable_body_entered"]
[connection signal="body_exited" from="Interactable" to="." method="_on_interactable_body_exited"]
[connection signal="timeout" from="ItemProcessingComponent/Timer" to="." method="_on_timer_timeout"]

[editable path="Interactable"]
[editable path="ItemProcessingComponent"]
